--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: page
 title: Krista Shepard
 subtitle: Data Scientist
 use-site-title: true
+bigimg: '/img/data.png'
 ---
 
 <div class="posts-list">
