--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Krista Shepard
-subtitle: Data Scientist
+# title: Krista Shepard
+# subtitle: Data Scientist
 use-site-title: true
 bigimg: '/img/data.png'
 ---
